# SimpleRayTracing

./: .gitignore  CMakeLists.txt  README.md  cube.ply  plot.py  plotTiming.py  run.sh  submit-serial.sh  temp-pthread-10  temp-pthread-6  timing-serial.csv
include/: Image.h  Image.inl
src/: Image.cxx  TriangleMesh.cxx  main-mpi-omp.cxx  main-mpi.cxx  main-omp.cxx  main-pthreads-lbuffer.cxx  main-pthreads-redo.cxx  main-pthreads-rows.cxx  main-pthreads.bak.cxx  main-pthreads.cxx  main.cxx
